--- a/discovery-service/Dockerfile
+++ b/discovery-service/Dockerfile
@@ -13,6 +13,8 @@ RUN mvn clean package -DskipTests
 FROM eclipse-temurin:21-jre-alpine
 WORKDIR /app
 
+RUN apk add --no-cache curl
+
 # Récupérer le nom du JAR à partir de l'étape de compilation
 ARG JAR_FILE=/app/discovery-service/target/*.jar
 COPY --from=builder ${JAR_FILE} discovery-service.jar
