--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,7 +11,8 @@ variables:
   DOCKER_DRIVER: overlay2
   MAVEN_CLI_OPTS: "-B --batch-mode --fail-at-end"
 
-  REGISTRY_URL: registry.gitlab.com/theoleb/quiz
+  # ❌ SUPPRESSION DE REGISTRY_URL : On utilise les variables CI/CD natives pour éviter les problèmes de chemin/casse.
+  # REGISTRY_URL: registry.gitlab.com/theoleb/quiz
 
   DOCKER_COMPOSE_FILE: docker-compose.yml
 
@@ -54,7 +55,7 @@ docker-build:
 
     - echo "Logging in to GitLab Container Registry..."
 
-    - echo "$CI_JOB_TOKEN" | docker login -u gitlab-ci-token --password-stdin registry.gitlab.com
+    - echo "$CI_JOB_TOKEN" | docker login -u "$CI_REGISTRY_USER" --password-stdin "$CI_REGISTRY"
 
     - echo "Building Docker images..."
 
@@ -79,7 +80,7 @@ docker-build:
     - docker build -t $CI_REGISTRY_IMAGE/config-server:latest -f config-server/Dockerfile config-server
     - docker push $CI_REGISTRY_IMAGE/config-server:latest
 
-    # FRONT-END
+    # FRONT-END (contexte: le dossier du service)
     - docker build -t $CI_REGISTRY_IMAGE/front-service:latest -f quiz-front/Dockerfile quiz-front
     - docker push $CI_REGISTRY_IMAGE/front-service:latest
 
@@ -89,7 +90,7 @@ docker-build:
 # ======================
 deploy:
   stage: deploy
-  image: alpine/ssh:latest
+  image: alpine/ssh:latest # Image légère avec SSH et SCP
   environment:
     name: Production
     url: https://$SERVER_HOST/ # Utilisateur en HTTPS, port à ignorer dans l'URL de l'environnement
