--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -86,13 +86,15 @@ docker-build:
 # ======================
 deploy:
   stage: deploy
-  image: alpine/ssh:latest # Image légère avec SSH et SCP
+  image: alpine:latest
   environment:
     name: Production
     url: https://$SERVER_HOST/ # Utilisateur en HTTPS, port à ignorer dans l'URL de l'environnement
   before_script:
+    # 0. INSTALLATION DES DÉPENDANCES MANQUANTES (ssh, git, base64)
+    - apk add --no-cache openssh-client git base64
+
     # 1. Configuration des clés SSH (nécessite SSH_PRIVATE_KEY, SERVER_HOST)
-    - apk add openssh-client git base64 # Ajout de 'base64' pour le décodage
     - eval $(ssh-agent -s)
 
     # --- DECODAGE DE LA CLE BASE64 ED25519 DANS UN FICHIER TEMPORAIRE ---
