--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -102,7 +102,7 @@ deploy:
 
     # Décodage de la clé privée Base64 (mise sur une seule ligne)
     - echo "Clé privée détectée. Décodage Base64 et écriture dans /tmp/id_ed25519..."
-    - echo "$SSH_PRIVATE_KEY" | base64 -d > /tmp/id_ed25519
+    - printf "%s" "$SSH_PRIVATE_KEY" | base64 -d > /tmp/id_ed25519
     - chmod 600 /tmp/id_ed25519
 
     # 2. Ajout de la clé temporaire à l'agent SSH
