--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
     networks:
       - quiz-net
     healthcheck:
-      test: [ "CMD", "curl", "-f", "http://localhost:8888/actuator/health" ]
+      test: [ "CMD-SHELL", "curl -f http://localhost:8888/actuator/health || exit 1" ]
       interval: 10s
       timeout: 10s
       retries: 10
@@ -35,7 +35,7 @@ services:
     networks:
       - quiz-net
     healthcheck:
-      test: [ "CMD", "curl", "-f", "http://localhost:8761/actuator/health" ]
+      test: [ "CMD-SHELL", "curl", "-f", "http://localhost:8761/actuator/health" ]
       interval: 5s
       timeout: 3s
       retries: 5
