--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -92,52 +92,54 @@ deploy:
     url: https://$SERVER_HOST/
   before_script:
 
-    # 0. INSTALLATION DES DÉPENDANCES ET MISE À JOUR POUR UBUNTU
-    # Ajout de 'base64' si non présent
-    - apt-get update -qq
-    - apt-get install -y openssh-client git coreutils
-    - eval $(ssh-agent -s)
-
-    # 1. CONFIGURATION DES CLÉS SSH
-
-    # Décodage de la clé privée Base64 (mise sur une seule ligne)
-    - echo "Clé privée détectée. Décodage Base64 et écriture dans /tmp/id_ed25519..."
-    - printf "%s" "$SSH_PRIVATE_KEY" | base64 -d > /tmp/id_ed25519
-    - chmod 600 /tmp/id_ed25519
-
-    # 2. Ajout de la clé temporaire à l'agent SSH
-    - ssh-add /tmp/id_ed25519
-
-    # 3. Préparation des clés du serveur hôte
-    - mkdir -p ~/.ssh
-    - chmod 700 ~/.ssh
-    - ssh-keyscan $SERVER_HOST >> ~/.ssh/known_hosts
-    - chmod 644 ~/.ssh/known_hosts
-
-    # 4. GÉNÉRATION DE LA CLÉ PUBLIQUE DU RUNNER POUR VÉRIFICATION
-    - echo "Génération de la clé publique correspondante pour la vérification sur le serveur..."
-    - ssh-keygen -y -f /tmp/id_ed25519 > /tmp/id_ed25519.pub
-    - CI_PUBLIC_KEY=$(cat /tmp/id_ed25519.pub)
-    - echo "Clé publique générée."
+#    # 0. INSTALLATION DES DÉPENDANCES ET MISE À JOUR POUR UBUNTU
+#    # Ajout de 'base64' si non présent
+#    - apt-get update -qq
+#    - apt-get install -y openssh-client git coreutils
+#    - eval $(ssh-agent -s)
+#
+#    # 1. CONFIGURATION DES CLÉS SSH
+#
+#    # Décodage de la clé privée Base64 (mise sur une seule ligne)
+#    - echo "Clé privée détectée. Décodage Base64 et écriture dans /tmp/id_ed25519..."
+#    - printf "%s" "$SSH_PRIVATE_KEY" | base64 -d > /tmp/id_ed25519
+#    - chmod 600 /tmp/id_ed25519
+#
+#    # 2. Ajout de la clé temporaire à l'agent SSH
+#    - ssh-add /tmp/id_ed25519
+#
+#    # 3. Préparation des clés du serveur hôte
+#    - mkdir -p ~/.ssh
+#    - chmod 700 ~/.ssh
+#    - ssh-keyscan $SERVER_HOST >> ~/.ssh/known_hosts
+#    - chmod 644 ~/.ssh/known_hosts
+#
+#    # 4. GÉNÉRATION DE LA CLÉ PUBLIQUE DU RUNNER POUR VÉRIFICATION
+#    - echo "Génération de la clé publique correspondante pour la vérification sur le serveur..."
+#    - ssh-keygen -y -f /tmp/id_ed25519 > /tmp/id_ed25519.pub
+#    - CI_PUBLIC_KEY=$(cat /tmp/id_ed25519.pub)
+#    - echo "Clé publique générée."
 
   script:
     # --- DÉBUT LOGIQUE DE DÉPLOIEMENT ---
 
     # 1. VÉRIFICATION DE LA CLÉ PUBLIQUE SUR LE SERVEUR
     - |
-      echo "Vérification de l'existence de la clé publique sur le serveur..."
-      
-      # Tente de se connecter au serveur et de vérifier si la clé est présente dans authorized_keys.
-      KEY_EXISTS=$(ssh -o BatchMode=yes $SERVER_USER@$SERVER_HOST "grep -q \"$CI_PUBLIC_KEY\" ~/.ssh/authorized_keys" 2>/dev/null; echo $?)
-      
-      if [ "$KEY_EXISTS" -eq 0 ]; then
-        echo "Clé publique déjà présente. Aucune action nécessaire."
-      else
-        echo "Clé publique absente. Ajout en cours..."
-        # Crée le dossier .ssh si nécessaire et ajoute la clé
-        ssh -o BatchMode=yes $SERVER_USER@$SERVER_HOST "mkdir -p ~/.ssh && echo \"$CI_PUBLIC_KEY\" >> ~/.ssh/authorized_keys && chmod 700 ~/.ssh && chmod 600 ~/.ssh/authorized_keys"
-        echo "Clé publique ajoutée avec succès."
-      fi
+      #echo "Vérification de l'existence de la clé publique sur le serveur..."
+#
+#      # Tente de se connecter au serveur et de vérifier si la clé est présente dans authorized_keys.
+#      KEY_EXISTS=$(ssh -o BatchMode=yes $SERVER_USER@$SERVER_HOST "grep -q \"$CI_PUBLIC_KEY\" ~/.ssh/authorized_keys" 2>/dev/null; echo $?)
+#
+#      if [ "$KEY_EXISTS" -eq 0 ]; then
+#        echo "Clé publique déjà présente. Aucune action nécessaire."
+#      else
+#        echo "Clé publique absente. Ajout en cours..."
+#        # Crée le dossier .ssh si nécessaire et ajoute la clé
+#        ssh -o BatchMode=yes $SERVER_USER@$SERVER_HOST "mkdir -p ~/.ssh && echo \"$CI_PUBLIC_KEY\" >> ~/.ssh/authorized_keys && chmod 700 ~/.ssh && chmod 600 ~/.ssh/authorized_keys"
+#        echo "Clé publique ajoutée avec succès."
+#      fi
+
+
 
     # 2. Transfert du docker-compose.yml vers le répertoire cible sur le serveur
     - scp $DOCKER_COMPOSE_FILE $SERVER_USER@$SERVER_HOST:$PROJECT_PATH/$DOCKER_COMPOSE_FILE
@@ -145,7 +147,7 @@ deploy:
     - echo "--- Déploiement sur le serveur Hetzner ---"
     # 3. Se connecter au serveur et exécuter les commandes Docker
     - |
-      ssh $SERVER_USER@$SERVER_HOST "
+      ssh -i $SSH_PRIVATE_KEY $SERVER_USER@$SERVER_HOST "
         set -e # Quitter si une commande échoue
       
         echo 'Navigating to deployment directory...'
