--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
       interval: 10s
       timeout: 10s
       retries: 10
-      start_period: 60s
+      start_period: 30s
     restart: unless-stopped
 
   discovery-service:
@@ -35,10 +35,11 @@ services:
     networks:
       - quiz-net
     healthcheck:
-      test: [ "CMD-SHELL", "curl", "-f", "http://localhost:8761/actuator/health" ]
-      interval: 5s
-      timeout: 3s
+      test: [ "CMD-SHELL", "curl -f http://localhost:8761/actuator/health || exit 1" ]
+      interval: 10s
+      timeout: 5s
       retries: 5
+      start_period: 30s
     restart: unless-stopped
 
   gateway-service:
