--- a/quiz-front/nginx.conf
+++ b/quiz-front/nginx.conf
@@ -5,8 +5,22 @@ server {
   root /usr/share/nginx/html;
   index index.html index.htm;
 
+  # 1. Routage des fichiers statiques (Application Front-end)
   location / {
     try_files $uri $uri/ /index.html;
+  }
+
+  # 2. PROXY : Routage des appels API vers le Gateway-Service
+  # Cette règle intercepte les requêtes commençant par /auth ou /api
+  location ~ ^/(auth|api)/ {
+    # Utilisez le nom du service Docker du Gateway et son port d'écoute interne (8222)
+    proxy_pass http://gateway-service:8222;
+
+    # Headers recommandés pour les microservices
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
   }
 
   # Cache statique (optionnel)
