--- a/quiz-front/nginx.conf
+++ b/quiz-front/nginx.conf
@@ -6,13 +6,14 @@ server {
   index index.html index.htm;
 
   # 1. Routage des fichiers statiques (Application Front-end)
+  # TOUTES les URLs qui ne sont pas /api/ sont gérées par Angular
   location / {
     try_files $uri $uri/ /index.html;
   }
 
   # 2. PROXY : Routage des appels API vers le Gateway-Service
-  # Cette règle intercepte les requêtes commençant par /auth ou /api
-  location ~ ^/(auth|api)/ {
+  # Cette règle intercepte UNIQUEMENT les requêtes commençant par /api/
+  location /api/ {
     # Utilisez le nom du service Docker du Gateway et son port d'écoute interne (8222)
     proxy_pass http://gateway-service:8222;
 
@@ -23,7 +24,10 @@ server {
     proxy_set_header X-Forwarded-Proto $scheme;
   }
 
-  # Cache statique (optionnel)
+  # 3. Laisser la logique du front-end gérer /auth/*
+
+
+  # Cache statique
   location ~* \.(?:ico|css|js|gif|jpe?g|png|woff2?|eot|ttf|svg)$ {
     expires 6M;
     access_log off;
